# cpputils

./: .gitignore  CMakeLists.txt  README.md
include/: mathlib.hpp  template_common.hpp
src/: mathlib.cpp
test/: CMakeLists.txt  test_mathlib.cpp  test_type_identity.cpp
